fix AttendeeApiController + enable sponsors to see past events